--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -321,7 +321,7 @@
   year={2017},
   organization={AcademyHealth},
   abstract={Research Objective: We present a framework that guides the design of mobile health applications (mHealth apps) that support patients’ self-management of chronic health conditions and symptoms. Study Design: To assess the state of research and market place in utilizing mHealth technology for managing osteoarthritis (OA), a common chronic disease that causes considerable burden in terms of patients’ quality of life and costs for medical treatments, we conducted a systematic review on the literature and a survey of online app stores. Specifically, we conducted in-depth review of 25 articles that mentioned both mHealth technologies and OA management; we also analyzed 23 relevant apps for OA management available in the market place (e.g., Google Play). Population Studied: Literature and mobile apps for OA management Principal Findings: Based on our literature and app analyses, we suggest that three modules should be implemented in an app for any type of chronic disease including OA, namely (a) Self-Management, (b) Decision Support, and (c) Shared Decision-Making. The Self-Management module provides patients with the ability to quantify and log their disease progress and be better informed about the symptoms and available treatment options. OA patients, for example, can record pain levels on a regular basis using this module. The patient-reported data then should be used to generate useful feedback for patients. In addition, the app should provide educational content to improve patients’ understanding of their conditions in general and address potential questions patients might have regarding their symptoms and treatment options. The Decision Support module is the backend of the app where the expert knowledge and computational power should come into play to suggest evidence-based, data-driven treatment options for patients. This module should use patient-reported data fed by the Self-Management module of the app and patient-centered research outcomes reported in the literature to assess patients’ status from the medical treatment perspective. Furthermore, this data can be used to assess patients’ readiness for more advanced treatment options based on clinical evidence. Lastly, the Shared Decision-Making module should enable patients and clinicians to share data collected/generated using the Self-Management and Decision Support modules and to choose the ideal treatment together. To facilitate the shared decision-making process, the app should visualize patients’ progress in the disease management (e.g., trends of symptoms) as well as clinical assessment indices over a period of time. The app should present these results in detailed and summary forms targeting the needs of two user types (i.e., patients and clinicians). The app, therefore, can enable the patients and the clinicians to be in the same page in the supposedly long-term process of chronic disease treatment and help them reach a health care decision based on mutual agreement. Conclusions:  The three modules described in the framework can work together to support patients’ self-management of chronic health conditions and symptoms. Implications for Policy or Practice: We believe this framework can help designers develop better mobile health apps that support patients’ self-management and informed shared decision-making in the treatment process with their clinicians.},
-  url={https://academyhealth.confex.com/academyhealth/2017arm/meetingapp.cgi/Paper/18194},
+  html={https://academyhealth.confex.com/academyhealth/2017arm/meetingapp.cgi/Paper/18194},
   poster={2017-AH-Poster.pdf}
 }
 
