--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -332,8 +332,8 @@
   year={2017},
   html={https://aisel.aisnet.org/amcis2017/Healthcare/Presentations/43/},
   abstract={User interface (UI) is a crucial component of any application, including mHealth apps, as UI directly affects the user–app interaction, which then determines the concrete user experience with the app. This paper presents the results of an experimental study that examines the effects of data entry UI types and task complexity on user experience within the context of a mobile app. We used a 2 (touch technique: tap vs. slide) X 2 (target direction: vertical vs. horizontal) X 2 (task complexity: simple vs. complex) design. Our findings indicate that UI design in terms of touch technique and target direction, as well as task complexity have a significant impact on the task completion time. As for error rate, however, we did not find any significant differences by UI design or task complexity level.},
-  poster={2017-AMCIS-Poster.pdf},
-  slides={2017-AMCIS-Slides.pdf}  
+  poster={2017-AMCIS-ERF-Poster.pdf},
+  slides={2017-AMCIS-ERF-Slides.pdf}  
 }
 
 @article{choi2017effective,
