--- a/_news/2024-12-28.md
+++ b/_news/2024-12-28.md
@@ -1,9 +1,9 @@
 ---
 layout: post
-title: Our paper "College students' credibility assessments of GenAI-generated information for academic tasks--An interview study" has been accepted.'
+title: JASIST - College students' GenAI credibility assessments
 date: 2024-12-28
 inline: true
 related_posts: false
 ---
 
-College students' credibility assessments of GenAI-generated information for academic tasks: An interview study
+Our paper "College students' credibility assessments of GenAI-generated information for academic tasks: An interview study" has been accepted to [JASIST](https://wonchan-choi.github.io/assets/pdf/2025-JASIST.pdf) 
