--- a/_news/2025-03-17.md
+++ b/_news/2025-03-17.md
@@ -1,9 +1,9 @@
 ---
 layout: post
-title: Our paper "Investigating the interactions between individuals with disabilities and information retrieval systems--A review of help-seeking situations, search tactics, and design recommendations" has been accepted for publication. <a href="https://scholar.google.com/citations?user=p5_1GbgAAAAJ&hl=en">Google Scholar</a>
+title: ARIST publication - BVI users
 date: 2025-03-17
 inline: true
 related_posts: false
 ---
 
-Investigating the interactions between individuals with disabilities and information retrieval systems: A review of help-seeking situations, search tactics, and design recommendations
+Our ARIST chapter, "Investigating the interactions between individuals with disabilities and information retrieval systems: A review of help-seeking situations, search tactics, and design recommendations," has been accepted for publication in *[JASIST]*(https://asistdl.onlinelibrary.wiley.com/doi/full/10.1002/asi.24997)
