--- a/_news/2024-12-28.md
+++ b/_news/2024-12-28.md
@@ -6,4 +6,4 @@ inline: true
 related_posts: false
 ---
 
-Our research article, "College students' credibility assessments of GenAI-generated information for academic tasks: An interview study," has been accepted for publication in [*JASIST*](https://asistdl.onlinelibrary.wiley.com/doi/full/10.1002/asi.24978)
+Our research article, "College students' credibility assessments of GenAI-generated information for academic tasks: An interview study," has been accepted for publication in *JASIST*
