--- a/_news/2025-04-16.md
+++ b/_news/2025-04-16.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Ranked among the top 10% of most-viewed papers in 2023
+title: Our paper, “Exploring Applications and User Experience with Generative AI Tools--A Content Analysis of Reddit Posts on ChatGPT" (<i>2023 Proceedings of ASIST</i>) ranked among the top 10% of most-viewed papers
 date: 2025-04-16
 inline: false
 related_posts: false
