--- a/_news/2024-12-28.md
+++ b/_news/2024-12-28.md
@@ -6,4 +6,4 @@ inline: true
 related_posts: false
 ---
 
-Our research article, "College students' credibility assessments of GenAI-generated information for academic tasks: An interview study," has been accepted for publication in *JASIST*
+Our research article, "College Students' Credibility Assessments of GenAI-generated Information for Academic Tasks: An Interview Study," has been accepted for publication in *JASIST*
