--- a/_news/2025-03-17.md
+++ b/_news/2025-03-17.md
@@ -6,4 +6,4 @@ inline: true
 related_posts: false
 ---
 
-Our ARIST chapter, "Investigating the interactions between individuals with disabilities and information retrieval systems: A review of help-seeking situations, search tactics, and design recommendations," has been accepted for publication in *JASIST*
+Our ARIST chapter, "Investigating the Interactions between Individuals with Disabilities and Information Retrieval Systems: A Review of Help-seeking Situations, Search Tactics, and Design Recommendations," has been accepted for publication in *JASIST*
