--- a/_news/2024-12-28.md
+++ b/_news/2024-12-28.md
@@ -6,4 +6,4 @@ inline: true
 related_posts: false
 ---
 
-Our research article, "College Students' Credibility Assessments of GenAI-generated Information for Academic Tasks: An Interview Study," has been accepted for publication in *JASIST*. [Preprint](/assts/pdf/2025-JASIST.pdf)
+Our research article, "College Students' Credibility Assessments of GenAI-generated Information for Academic Tasks: An Interview Study," has been accepted for publication in *JASIST*. [Preprint](https://wonchan-choi.github.io/assts/pdf/2025-JASIST.pdf)
