--- a/_news/2025-08-20.md
+++ b/_news/2025-08-20.md
@@ -6,4 +6,4 @@ inline: true
 related_posts: false
 ---
 
-Our research article, "Perceived Importance and Predictive Power: Key Criteria for Judging Information Credibility on Social Q&A Platforms," has been accepted for publication in *The Electronic Library*. [[Preprint]](https://wonchan-choi.github.io/assets/pdf/2025-JASIST.pdf)
+Our research article, "[Perceived Importance and Predictive Power: Key Criteria for Judging Information Credibility on Social Q&A Platforms](https://wonchan-choi.github.io/assets/pdf/2025-JASIST.pdf)," has been accepted for publication in *The Electronic Library*
