--- a/_news/2025-05-20.md
+++ b/_news/2025-05-20.md
@@ -1,9 +1,9 @@
 ---
 layout: post
-title: Accepted for a penal at the 2025 ASIS&T Virtual Setellite Meeting (December 2025)
+title: AM24 Virtual Panels
 date: 2025-05-20
 inline: true
 related_posts: false
 ---
 
-Accepted for a penal at the 2025 ASIS&T Virtual Satellite Meeting (December 2025)
+Our panel, "[Researching Health Information Behaviors: Landscape, AI’s Role and Its Impact](https://www.asist.org/meetings-events/am/am25/am25-panels-ae/)," accepted at the 2025 ASIS&T Virtual Panels.
