--- a/_news/2024-12-28.md
+++ b/_news/2024-12-28.md
@@ -6,4 +6,4 @@ inline: true
 related_posts: false
 ---
 
-Our research article, "[College Students' Credibility Assessments of GenAI-generated Information for Academic Tasks: An Interview Study](https://wonchan-choi.github.io/assets/pdf/2025-JASIST.pdf)," has been accepted for publication in *JASIST*
+Our research article, "[College Students' Credibility Assessments of GenAI-generated Information for Academic Tasks: An Interview Study](https://wonchan-choi.github.io/assets/pdf/2025-JASIST.pdf)," has been accepted for publication in *JASIST*.
