--- a/_news/2025-04-16.md
+++ b/_news/2025-04-16.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Our short paper ranked among the top 10% of most-viewed papers in <i>2023 Proceedings of ASIS&T</i>
+title: Our short paper ranked among the top 10% of most-viewed papers in <i>2023 Proceedings of ASIS&T</i>.
 date: 2025-04-16
 inline: false
 related_posts: false
