--- a/_news/2025-07-08.md
+++ b/_news/2025-07-08.md
@@ -6,4 +6,4 @@ inline: true
 related_posts: false
 ---
 
-Two posters accepted for the 2025 ASIS&T Annual Meeing, which will be held in Washington D.C. (November 2025)
+Two posters accepted for the [2025 ASIS&T in-person poster session](https://www.asist.org/meetings-events/am/am25/am25-posters/) in Washington, D.C.
