--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -32,6 +32,8 @@ where criteria like reference reliability remain relevant.},
   doi={},
   selected={true},
   abbr={Journal}
+  pdf={2025-TEL-Preprint.pdf},
+
 }
 
 @article{xie2025investigating,
@@ -305,7 +307,7 @@ where criteria like reference reliability remain relevant.},
   publisher={Oxford University Press US},
   doi={https://doi.org/10.1093/geroni/igab046.3428},
   abstract={The World Population Prospects 2019 reports that the proportion of people who aged 65 and above takes up 9 per cent globally in 2019, reaching up to 16 per cent by 2050. Asia has the fastest rise: from 1 in 9 people aged 65 and above to 1 in 4 in 2050. Rapid growth in older adults has strong implications for diseases and healthcare expenditure. For Singapore, the transition from ‘ageing society’ (7% seniors) in 1999 to ‘super-aged society’ (20% seniors) in 2026 is projected to take 27 years, much faster than Japan’s 36 years. We used the Singapore Multi-Ethnic Cohort (MEC) of 14,465 subjects aged 21 to 94, and the Future Elderly Model (FEM) microsimulation model to project disease burden and hospitalization expenditures to 2050. We found that Chinese females had the highest life expectancy of 86.0 years, followed by Indian and Malay females with 80.4 and 75.6 years respectively. In all racial groups, women lived longer than men by 5-7 years. Cumulative hospitalization expenditures of older adults aged 51+ was US$69,500 for Chinese, US$67,600 for Malays and US$86,100 for Indians; US$71,200 for males and US$70,700 for females. The increased hospitalization spending for all three ethnic groups was due to the underlying manifestation of chronic diseases, including diabetes, hypertension, heart disease and stroke. Variations in environmental risk factors such as diet, cigarette smoking and physical activity across ethnic groups may contribute to racial differences in chronic diseases and disability. Therefore, targeted interventions are needed to reduce racial disparities.},
-  pdf={https://watermark.silverchair.com/igab046.3428.pdf?token=AQECAHi208BE49Ooan9kkhW_Ercy7Dm3ZL_9Cf3qfKAc485ysgAAA5owggOWBgkqhkiG9w0BBwagggOHMIIDgwIBADCCA3wGCSqGSIb3DQEHATAeBglghkgBZQMEAS4wEQQMPnwYiKlGmObDtwvaAgEQgIIDTXLWVjEgAgLW6rgdFT58LdnYOs4XtYlEfb4b3ri274_R623ie8dLfI0OHYB-gGbKG6Aadtte7m_qpGYkW0Z829OceRJZfI4jwS8prhX53Sh4YLKeoki-iGYNak38DxFIBAM_TQuQfmfsAR0NVs2XrBcWWXwP4EiLa1v1B2VOLUiBoSWpDs-4YNzGXVa_R5YTZ3BDdTA_jD2WcUfYlKz9qAzC0jGsB6Y8cgLeaErJFTeyS3RnACjYA09ArbN-6rIYcNFmo6GUld779kZ1dnCFAvTsXOrmhakSJTusr_5QS-CCaG07cCEUak_1hDC0ZjFzEVPRHSvKD4r0jehu5XjHNagj1rvgdUp1NayrLwGyYRPRQdqs9wJRsHXvIn6b-J7jzMf_PDp6bNDGW-WWsB3qB9ev0MXHEcSFCh4QAmhd6XGtSYUmu24ZXZWq4zGPcqMIOCaBwVJWKRPJUpnzi9fihaQRWIYC3LCGzmN1AeGIljYRenlygOdlumzC6qwskxwEd5b_IfVNG_sG_3N4ylnOrE0MZR1PwD3VXrdkRBM4Ui8jhQJXoMewel9tosX3KOKd18rGU5rtCJ79KFMjZiI8X9BkqpRLT0z0sqwHm5wALg-xvCPJzwJ2tbGfNWakzlh-MqgkvE8UfDnEDPPkwh1Pj29Zw8SubsgP1NbBYHhowIB2mvXJhIQW3bCQ1hVp4iExTsLGTolMMwVCgRoUZwMDC9H1iqBxyY_Z9nnpBjfU8MdAE-9qfAQqFAISDVQj2bS1R8cEuLBftQRzYbXGkwVci24JFtkGBsvtWwNiGDPKuu4qj395qnvJn_MzdD67OuXwDZ5nD7e6YOJnGZDwlb-4QF-r4A838rhKyBeAfmGAL3Zk97VuUkQsuL-PerxQcXAW-aAU4gXOyMxQ08cszEsQdJKe-6DQISmPzwF74DYHl10cgkWxdQgpoiLJe66mlPYqKOQtI7LoG8RkecoeYnu0bcNjj13-GvucUmSNKSXTyDibj_FpfU7Qk_gJIw5ZKGDeZBVgFr2l-xSZuOfaeZ9BtPLnDqjS6kQhShL8A5VKqxrxvx7I4wY4CDdoMO1ZG5aBJz4I7Q5SdDTevA9w-0gVH89P0Ld2jf1pIC48i8Zg}
+  abbr={ConfProc}
 }
 
 @article{choi2019mhealth,
@@ -389,7 +391,8 @@ where criteria like reference reliability remain relevant.},
   html={https://aisel.aisnet.org/amcis2017/Healthcare/Presentations/43/},
   abstract={User interface (UI) is a crucial component of any application, including mHealth apps, as UI directly affects the user–app interaction, which then determines the concrete user experience with the app. This paper presents the results of an experimental study that examines the effects of data entry UI types and task complexity on user experience within the context of a mobile app. We used a 2 (touch technique: tap vs. slide) X 2 (target direction: vertical vs. horizontal) X 2 (task complexity: simple vs. complex) design. Our findings indicate that UI design in terms of touch technique and target direction, as well as task complexity have a significant impact on the task completion time. As for error rate, however, we did not find any significant differences by UI design or task complexity level.},
   poster={2017-AMCIS-ERF-Poster.pdf},
-  slides={2017-AMCIS-ERF-Slides.pdf}  
+  slides={2017-AMCIS-ERF-Slides.pdf},
+  abbr={ConfProc}
 }
 
 @article{choi2017effective,
@@ -400,7 +403,9 @@ where criteria like reference reliability remain relevant.},
   html={https://scholarspace.manoa.hawaii.edu/items/75763010-34cc-4cf1-9c5d-eff1447bdd3b},
   abstract={The effect of user interface (UI) design decisions on system usability has been discussed in information system literature. These discussions evolved into investigating the effectiveness of UI and how it affects a system user’s performance, as well as his or her perception of the system as a whole. This paper investigates the role of UI design on facilitating effective use in the context of mobile applications. Based on the Effective Use Theory, we test four different UIs developed for frequent data input tasks in a mobile platform using a controlled experiment and a follow-up survey. Our findings indicate that UI design in terms of touch technique (tap vs. slide) and target direction (vertical vs. horizontal) has a significant impact on the task completion time, as well as the app UIs’ perceived usability and likability. We discuss both theoretical and empirical implications of the results and suggest future research directions.},
   pdf={2017-HICSS-Paper.pdf},
-  slides={2017-HICSS-Slides.pdf}
+  slides={2017-HICSS-Slides.pdf},
+  abbr={ConfProc},
+  abbr={Best Paper Nominated}
 }
 
 @article{zheng2016using,
