--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -414,7 +414,9 @@ where criteria like reference reliability remain relevant.},
   journal={Concordium 2016},
   year={2016},
   abstract={Introduction: Arthritis of the knee is the most common physical disability in US adults. For advanced knee arthritis patients, total knee replacement (TKR) is a surgical intervention that can effectively eliminate pain and improve physical function. Before choosing TKR, patients and clinicians must consider the risks and benefits of TKR and determine if the likely outcomes will meet the patient’s individual goals. Patient-reported outcome (PRO) measures have been widely used in orthopedic clinical research to summarize the patient's arthritis pain severity and functional limitations before and after TKR. A national research registry, Function and Outcomes Research for Comparative Effectiveness in Total Joint Replacement (FORCE-TJR), successfully collected PRO measures from 13,000 primary TKR patients of over 150 surgeons in 28 states and disseminated aggregate comparative outcomes to participating hospitals and surgeons. To translate these outcomes to patients, an AHRQ-funded mHealth study is designing and testing a mobile app translating FORCE-TJR outcome data to provide knee arthritis patients with information and education about timing, value, and individualized likely outcomes from TKR to support patient and clinician shared treatment decision making. Methods: We developed an Android-based smart phone app for knee arthritis patients to assess arthritis symptoms and individual readiness for TKR surgery. Tailored, patient-centered outcome prediction models from the FORCE-TJR cohort provide refined outcome estimates. Patient focus groups and clinician interviews were conducted to obtain patients’ and clinicians’ feedback on their preferred graphic displays of data, questions, and evaluation results. Laboratory and field usability testing are beginning to finalize the app content and format. Findings: Three patient focus groups were conducted between December 2015 and February 2016. The preliminary findings from the focus groups revealed that the patients prefer easy tap user interfaces to multi-tap or slider methods, vertical question layout to horizontal orientation, and both numbered and worded rating scales to only using words. With input, a tailored report was designed with individual patient factors and trended pain and function history over time, based on FORCE-TJR data. Final clinician interviews are being conducted to evaluate the app’s shared report. Conclusions: An mHealth app was designed to disseminate tailored patient-centric outcome predictions developed from a contemporary national TKR cohort with refined usability and display features to meet the needs of knee arthritis patients faced with surgical treatment decisions. Dissemination of patient-reported symptoms and outcomes from recent TKR patients will support patient decision engagement and shared decision making for future knee arthritis patients. Lessons Learned: User input can inform the design and implementation of mHealth technology to deliver tailored knowledge to patients through a user-defined, patient-centered smart phone app. The tool will support future knee arthritis patient decisions regarding the need for, and timing of TKR surgery.},
-  html={https://academyhealth.confex.com/academyhealth/2016concordium/meetingapp.cgi/Paper/13102}
+  html={https://academyhealth.confex.com/academyhealth/2016concordium/meetingapp.cgi/Paper/13102},
+  abbr={Journal}
+
 }
 
 @article{choi2016developing,
@@ -424,7 +426,8 @@ where criteria like reference reliability remain relevant.},
   year={2016},
   abstract={Given the prevalence of osteoarthritis (OA) and the potential usefulness of mHealth technologies for OA self-management and treatment decisions, the authors attempt to develop an mHealth App that is particularly focused on OA. As part of a larger project, the authors have conducted two focus groups exploring OA patients’ perceptions of pain data input user interfaces (UIs), pain scale, and requirements for the mHealth App on OA. The preliminary findings from the focus groups revealed that the patients preferred the Tap-Horizontal UI the most, while the Tap-Tap-Tap type of UIs were always rated lower than other types of UIs in the study. In regard to the pain scale, most participants highlighted that including numeric rating scales along with the corresponding wording would help them gauge their pain levels more accurately. Lastly, the focus group discussions and free sketch session generated useful ideas around the functional requirements and design insights.},
   html={https://aisel.aisnet.org/amcis2016/Health/Presentations/25/},
-  poster={2016-AMCIS-ERF-Poster.pdf}
+  poster={2016-AMCIS-ERF-Poster.pdf},
+  abbr={ConfProc}
 }
 
 @article{yang2016publication,
@@ -461,7 +464,11 @@ where criteria like reference reliability remain relevant.},
   author={Choi, Wonchan and Stvilia, Besiki},
   journal={iConference 2015 Proceedings},
   year={2015},
-  publisher={iSchools}
+  publisher={iSchools},
+  abbr={ConfProc},
+  pdf={2015-iConf-Poster-Manu.pdf},
+  html={https://www.ideals.illinois.edu/items/73945},
+  poster={2015-iConf-Poster.pdf}
 }
 
 @article{stvilia2015mobile,
