--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -503,7 +503,8 @@ where criteria like reference reliability remain relevant.},
 @article{choi2015new-b,
   title={New framework of web credibility assessment and an exploratory study of older adults' information behavior on the Web},
   author={Choi, Wonchan},
-  year={2015}
+  year={2015}, 
+  abbr={Dissertation}
 }
 
 @article{choi2014college,
