--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -468,7 +468,8 @@ where criteria like reference reliability remain relevant.},
   abbr={ConfProc},
   pdf={2015-iConf-Poster-Manu.pdf},
   html={https://www.ideals.illinois.edu/items/73945},
-  poster={2015-iConf-Poster.pdf}
+  poster={2015-iConf-Poster.pdf},
+  abstract={This poster reports on a study that used a literature analysis to develop a new, extended conceptual framework for Web credibility assessment. The proposed framework conceptualizes the relationship among the key dimensions of credibility (i.e., trustworthiness and expertise), related measures, and objects of those measures (i.e., source, message, and media) that have been identified in the literature. The framework will be tested through empirical data. In particular, an online survey questionnaire will be developed in accordance with the new framework and distributed to college students for data collection. The outcomes of this study will include the new framework and survey questionnaire that could be used as reusable knowledge resources in development of credibility assessment models in different online contexts.}
 }
 
 @article{stvilia2015mobile,
@@ -504,7 +505,9 @@ where criteria like reference reliability remain relevant.},
   title={New framework of web credibility assessment and an exploratory study of older adults' information behavior on the Web},
   author={Choi, Wonchan},
   year={2015}, 
-  abbr={Dissertation}
+  abbr={Dissertation},
+  html={https://repository.lib.fsu.edu/islandora/object/fsu:253213},
+  abstract={This dissertation research aims to provide a better understanding of people's credibility assessment of online information (i.e., Web credibility assessment), which is an important part of their information behavior. In particular, this research focuses on older adults as a research population as they are a less studied user group in the literature on information credibility. Considering the ever increasing presence of older adults on the Web and their needs for health information in their daily lives, this research explores older adults' credibility assessment of online health information within the context of everyday life information seeking (ELIS). The methodology employed in this research consists of a qualitative meta-study (Phase I) and semi-structured interviews (Phase II). In Phase I, the researcher analyzed 84 primary research reports on information credibility, identifying conceptual typologies of important facets of credibility assessment such as conceptualization, operationalization, variability (user characteristics and contexts), and process. Based on these conceptual typologies, the researcher proposed a new, extended framework of Web credibility assessment, named WC framework, that contains three main components, Assessment of WC—i.e., conceptualization and operationalization to measure Web credibility; Variability of WC—i.e., variables regarding individual and context; and Process of WC—i.e., the overall process of Web credibility assessment. In Phase II, the researcher conducted semi-structured interviews with twenty-one older adults whose ages ranged from 61 to 80 (M = 70.3) in the manner of one-on-one, in-person. The purposeful sampling methods, such as convenience sampling and snowball sampling, were used to recruit older adults who meet the sampling criteria of the study: age (55 years old or older), residency (Florida residents for an in-person interview), and Internet use experience. Also, a prescreen test was carried out via a telephone interview to make sure that the participant's cognitive function was adequate for the study. Those who met all the sampling criteria and passed the prescreen test were recruited for an in-person interview which lasted around 45 minutes. The interview data revealed that older adults needed health/wellness information regarding medication and supplements, symptoms of and cures for specific diseases, medical quality assurance, health insurance, nutrition, and exercise. In seeking health information, they used both interpersonal and online sources. As for the interpersonal sources, the research participants mentioned medical professionals (e.g., doctors and physicians), partners, family, and friends. On the Web, they referenced information from non-profit (i.e., non-commercial) institutions' websites such as government websites (e.g., NIH, CDC) and university hospitals' websites (e.g., Johns Hopkins Medicine, Harvard Medical School). The most frequently mentioned commercial website was WebMD. Depending on the purposes of health information seeking, some interviewees mentioned that they used pharmacists' websites (e.g., Walgreens and CVS). When judging the credibility of online health information, they employed various cues/markers and heuristics that are related to the attributes of the operator (i.e., source), content (i.e., message), and design (i.e., media) of Web resources. Based on the new framework developed in Phase I, the informants' Web credibility assessment process was characterized with the two stages: initial and final evaluations. Lastly, both theoretical and empirical implications of the research and future research directions were discussed. Specifically, the new Web credibility assessment framework (i.e., the WC framework) advanced our understanding of the conceptualization of Web credibility and can be used as a knowledge resource in developing context specific credibility assessment models as well as information system interfaces that provide effective support for information credibility evaluation by users. Likewise, findings from the semi-structured interviews can inform online information system developers and librarians about how older users search for online health information and how they assess its credibility. Ultimately, the findings of this research should help the development of more effective online systems, services, and, training modules that are aligned with the online information behaviors of this rapidly growing, important user population—i.e., older adults.}
 }
 
 @article{choi2014college,
@@ -512,7 +515,11 @@ where criteria like reference reliability remain relevant.},
   author={Choi, Wonchan and Stvilia, Besiki},
   journal={iConference 2014 Proceedings},
   year={2014},
-  publisher={iSchools}
+  publisher={iSchools}, 
+  html={https://www.ideals.illinois.edu/items/47352},
+  abstract={This work-in-progress poster reports on the preliminary findings regarding college students’ value structure of how to choose and utilize mobile health/wellness applications. We have conducted surveys and follow-up interviews with college students who have been using mobile health/wellness applications. In this poster, we analyzed the survey data from sixteen participants and the interview data from five participants (three females and two males). The analysis showed that the most important purposes of using mobile health/wellness applications for college students were recording and managing personal health information/records and keeping up with their fitness plans. For selection criteria, easy to navigate, easy to use, quality of content, customizability, and ratings from other users seemed to play the most important role in college students’ choices of certain mobile applications among alternatives.},
+  pdf={2014-iConf-Poster-Manu.pdf},
+  poster={2014-iConf-Poster.pdf}
 }
 
 @article{choi2014college,
