--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -404,8 +404,7 @@ where criteria like reference reliability remain relevant.},
   abstract={The effect of user interface (UI) design decisions on system usability has been discussed in information system literature. These discussions evolved into investigating the effectiveness of UI and how it affects a system user’s performance, as well as his or her perception of the system as a whole. This paper investigates the role of UI design on facilitating effective use in the context of mobile applications. Based on the Effective Use Theory, we test four different UIs developed for frequent data input tasks in a mobile platform using a controlled experiment and a follow-up survey. Our findings indicate that UI design in terms of touch technique (tap vs. slide) and target direction (vertical vs. horizontal) has a significant impact on the task completion time, as well as the app UIs’ perceived usability and likability. We discuss both theoretical and empirical implications of the results and suggest future research directions.},
   pdf={2017-HICSS-Paper.pdf},
   slides={2017-HICSS-Slides.pdf},
-  abbr={ConfProc},
-  abbr={Best Paper Nominated}
+  abbr={ConfProc}
 }
 
 @article{zheng2016using,
@@ -519,7 +518,8 @@ where criteria like reference reliability remain relevant.},
   html={https://www.ideals.illinois.edu/items/47352},
   abstract={This work-in-progress poster reports on the preliminary findings regarding college students’ value structure of how to choose and utilize mobile health/wellness applications. We have conducted surveys and follow-up interviews with college students who have been using mobile health/wellness applications. In this poster, we analyzed the survey data from sixteen participants and the interview data from five participants (three females and two males). The analysis showed that the most important purposes of using mobile health/wellness applications for college students were recording and managing personal health information/records and keeping up with their fitness plans. For selection criteria, easy to navigate, easy to use, quality of content, customizability, and ratings from other users seemed to play the most important role in college students’ choices of certain mobile applications among alternatives.},
   pdf={2014-iConf-Poster-Manu.pdf},
-  poster={2014-iConf-Poster.pdf}
+  poster={2014-iConf-Poster.pdf},
+  abbr={ConfProc}
 }
 
 @article{choi2014college,
@@ -530,7 +530,11 @@ where criteria like reference reliability remain relevant.},
   number={1},
   pages={1--4},
   year={2014},
-  publisher={Wiley Online Library}
+  publisher={Wiley Online Library}, 
+  abstract={This poster reports on the findings from interviews with fifty college students regarding what mobile health and wellness applications students used and how they choose those applications. In terms of application types, calorie and daily activity counters, such as MyFitnessPal and Lose It!, were most popular for the participants in the study, followed by running trackers, such as Nike+ Running and MapMyRun, and exercise/workout trackers, such as Fitness Buddy and Ab Workouts. Students seemed to prefer free applications and they evaluated and chose applications both indirectly (i.e., based on third party information and recommendations) and directly (i.e., through use).},
+  abbr={ConfProc},
+  pdf={2014-ASIST-Poster.pdf},
+  doi={https://asistdl.onlinelibrary.wiley.com/doi/10.1002/meet.2014.14505101115}
 }
 
 @article{choi2013guidelines,
