--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,36 +2,17 @@
 ---
 
 @article{choi2025mturk,
-  title={Perceived importance and predictive power: Key criteria for judging information credibility on social 
-Q&A platforms},
+  title={Perceived importance and predictive power: Key criteria for judging information credibility on social Q&A platforms},
   author={Choi, Wonchan and Lee, Hyun Seung},
   journal={The Electronic Library},
   year={2025},
   publisher={Emerald Publishing},
-  abstract={Purpose. This study investigated how users assess the credibility of information on social question-and-
-answer (Q&A) platforms. The study builds on a social Q&A-specific web credibility framework (Choi et 
-al., 2023), integrating a two-dimensional model of credibility—trustworthiness and expertise (Hovland 
-et al., 1953)—and three types of web credibility cues and heuristics—author or community, content, 
-and design (Fogg, 2003). 
-Methodology. Using online survey data from 598 users, we employed exploratory factor analysis to 
-identify 10 credibility criteria across three categories: author or community, content, and design. One-
-sample t-tests assessed the perceived importance of these criteria, and multiple regression analyses 
-examined their associations with two core credibility dimensions—trustworthiness and expertise—while 
-controlling for user characteristics. 
-Findings. Although the identified criteria were rated highly overall in conceptual importance (M = 3.92), 
-only six—community reputation, appropriate design, moderation, engaging design, reference reliability, 
-and decency—were significantly associated with perceived trustworthiness, expertise, or both. In 
-contrast, traditionally valued criteria related to answer quality or author characteristics had limited 
-predictive power. These findings support a refined, empirically grounded eight-criterion framework for 
-credibility in social Q&A environments. 
-Originality. This study offers a data-driven update to a 21-criterion credibility model, identifying the 
-most influential criteria in terms of conceptual importance and applicability in evaluating the 
-trustworthiness and expertise of information on peer-based, collaborative platforms. Also, it suggests 
-potential to extend the framework to emerging environments such as generative artificial intelligence, 
-where criteria like reference reliability remain relevant.},
-  doi={},
+  abstract={Purpose. This study investigated how users assess the credibility of information on social question-and-answer (Q&A) platforms. The study builds on a social Q&A-specific web credibility framework (Choi et al., 2023), integrating a two-dimensional model of credibility—trustworthiness and expertise (Hovland et al., 1953)—and three types of web credibility cues and heuristics—author or community, content, and design (Fogg, 2003). 
+  Methodology. Using online survey data from 598 users, we employed exploratory factor analysis to identify 10 credibility criteria across three categories: author or community, content, and design. One-sample t-tests assessed the perceived importance of these criteria, and multiple regression analyses examined their associations with two core credibility dimensions—trustworthiness and expertise—while controlling for user characteristics. 
+  Findings. Although the identified criteria were rated highly overall in conceptual importance (M = 3.92), only six—community reputation, appropriate design, moderation, engaging design, reference reliability, and decency—were significantly associated with perceived trustworthiness, expertise, or both. In contrast, traditionally valued criteria related to answer quality or author characteristics had limited predictive power. These findings support a refined, empirically grounded eight-criterion framework for credibility in social Q&A environments. 
+  Originality. This study offers a data-driven update to a 21-criterion credibility model, identifying the most influential criteria in terms of conceptual importance and applicability in evaluating the trustworthiness and expertise of information on peer-based, collaborative platforms. Also, it suggests potential to extend the framework to emerging environments such as generative artificial intelligence, where criteria like reference reliability remain relevant.},
   selected={true},
-  abbr={Journal}
+  abbr={Journal},
   pdf={2025-TEL-Preprint.pdf},
 
 }
