--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -13,6 +13,7 @@
   Originality. This study offers a data-driven update to a 21-criterion credibility model, identifying the most influential criteria in terms of conceptual importance and applicability in evaluating the trustworthiness and expertise of information on peer-based, collaborative platforms. Also, it suggests potential to extend the framework to emerging environments such as generative artificial intelligence, where criteria like reference reliability remain relevant.},
   selected={true},
   abbr={Journal},
+  abbr={ConfProc},
   pdf={2025-TEL-Preprint.pdf},
 
 }
