--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -12,10 +12,8 @@
   Findings. Although the identified criteria were rated highly overall in conceptual importance (M = 3.92), only six—community reputation, appropriate design, moderation, engaging design, reference reliability, and decency—were significantly associated with perceived trustworthiness, expertise, or both. In contrast, traditionally valued criteria related to answer quality or author characteristics had limited predictive power. These findings support a refined, empirically grounded eight-criterion framework for credibility in social Q&A environments. 
   Originality. This study offers a data-driven update to a 21-criterion credibility model, identifying the most influential criteria in terms of conceptual importance and applicability in evaluating the trustworthiness and expertise of information on peer-based, collaborative platforms. Also, it suggests potential to extend the framework to emerging environments such as generative artificial intelligence, where criteria like reference reliability remain relevant.},
   selected={true},
-  abbr={Journal},
-  abbr={ConfProc},
+  abbr={TEL},
   pdf={2025-TEL-Preprint.pdf},
-
 }
 
 @article{xie2025investigating,
@@ -27,7 +25,7 @@
   abstract={People with disabilities face barriers when engaging with information retrieval (IR) systems due to designs that overlook their needs. This systematic literature review explores research for individuals with disabilities interacting with IR systems. Relevant theories concerning disabilities were examined, and the gap model was used as the theoretical framework that guided the review. This review covers relevant research published from 2000 to 2023, focusing on user groups with sensory, cognitive, and motor impairments. The main topics are help-seeking situations encountered by these user groups in various IR systems due to system design not meeting user needs, and search tactics applied by users with different types of disabilities corresponding to various help-seeking situations. Design recommendations for IR systems and platforms were also examined. Key limitations in existing research and the authors' reflections are highlighted, including a lack of theories on the interactions between people with disabilities and IR systems, imbalanced research on and misclassification between different types of impairments, unclear distinctions between accessibility and usability, unexplored IR issues in mobile environments, and inadequate existing IR system designs, along with the challenges posed by one-size-fits-all design. Further research opportunities are also proposed.},
   doi={https://asistdl.onlinelibrary.wiley.com/doi/abs/10.1002/asi.24997},
   selected={true},
-  abbr={Journal}
+  abbr={JASIST}
 }
 
 @article{choi2025college,
@@ -40,7 +38,7 @@
   doi={https://doi.org/10.1002/asi.24978},
   pdf={2025-JASIST.pdf},
   selected={true},
-  abbr={Journal}
+  abbr={JASIST}
 }
 
 @article{an2024college,
@@ -55,7 +53,7 @@
   abstract={The introduction of ChatGPT has sparked significant interest and presented both great opportunities and challenges to higher education. While more students are using ChatGPT, little is known about their mental models for and sensemaking of the system, including the metaphors they use to understand the system. In this exploratory study, we interviewed 25 students at three universities in the US during the summer of 2023 to identify the metaphors they use for ChatGPT. Through qualitative analysis of the interview transcripts, we found that participants commonly used metaphors to make sense of ChatGPT. They compared ChatGPT to humans and popular technologies or tools, with being the most frequently Google mentioned. These findings highlight the potential for metaphor-based design and the development of AI literacy programs.},
   doi={https://doi.org/10.1002/pra2.1116}, 
   pdf={2024-ASIST-Abstract1.pdf},
-  abbr={ConfProc}
+  abbr={ASIST}
 }
 
 @article{xie2024help,
@@ -70,7 +68,7 @@
   abstract={While it is common for blind and visually impaired (BVI) users to use mobile devices to search for information, little research has explored the accessibility issues they encounter in their interactions with information retrieval systems, in particular digital libraries (DLs). This study represents one of the most comprehensive research projects, investigating accessibility issues, especially help-seeking situations BVI users face in their DL search processes. One hundred and twenty BVI users were recruited to search for information in six DLs on four types of mobile devices (iPhone, iPad, Android phone, and Android tablet), and multiple data collection methods were employed: questionnaires, think-aloud protocols, transaction logs, and interviews. This paper reports part of a large-scale study, including the categories of help-seeking situations BVI users face in their interactions with DLs, focusing on seven types of help-seeking situations related to visual interactions on mobile platforms: difficulty finding a toggle-based search feature, difficulty understanding a video feature, difficulty navigating items on paginated sections, difficulty distinguishing collection labels from thumbnails, difficulty recognizing the content of images, difficulty recognizing the content of graphs, and difficulty interacting with multilayered windows. Moreover, corresponding design recommendations are also proposed: placing meaningful labels for icon-based features in an easy-to-access location, offering intuitive and informative video descriptions for video players, providing structure information about a paginated section, separating collection/item titles from thumbnail descriptions, incorporating artificial intelligence image/graph recognition mechanisms, and limiting screen reader interactions to active windows. Additionally, the limitations of the study and future research are discussed.},
   doi={https://doi.org/10.3390/jimaging10080205},
   pdf={2024-JImage.pdf},
-  abbr={Journal}
+  abbr={Image}
 }
 
 @article{choi2024reflective,
@@ -86,7 +84,7 @@
   doi={https://doi.org/10.1002/pra2.1125},
   pdf={2024-ASIST-Abstract2.pdf},
   poster={2024-ASIST-Poster2.pdf},
-  abbr={ConfProc}
+  abbr={ASIST}
 }
 
 @article{choi2023developing,
